2005-01-03 23:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Improved resource handling in saveGormDocument:
	* GormImageEditor.m: Implemented deleteSelection
	* GormImage.[hm]: Added new init methods.
	* GormSoundEditor.m: Implemented deleteSelection
	* GormSound.[hm]: Added new init methods.

2005-01-02 15:11 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m
	* GormSoundEditor.m: Fix to correct exception when dragging
	from a cell which doesn't contain a resource.

2005-01-01 10:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBObjectAdditions.m: Implementation for nibLabel.
	* GormLib/IBObjectProtocol.h: Better document for nibLabel.

2005-01-01 09:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBApplicationAdditions.h
	* GormLib/IBCellProtocol.h
	* GormLib/IBConnectors.h
	* GormLib/IBInspector.h
	* GormLib/IBObjectProtocol.h
	* GormLib/IBSystem.h
	* GormLib/IBViewProtocol.h: Completed all documentation 
	for existing IntefaceBuilder classes.

2005-01-01 02:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/GNUmakefile: Added new headers and new .m file.
	* GormLib/IBCellAdditions.h: Added include for NSCell.h
	* GormLib/IBDocuments.h: Added documentation.
	* GormLib/IBDocuments.m: Added include of IBDocuments.h to get
	string declarations.
	* GormLib/IBPalette.m: Implemented IBPaletteDocument.
	* GormLib/IBProjectFiles.h: New
	* GormLib/IBProjects.h: New
	* GormLib/IBResourceManager.[hm]: New
	* GormLib/InterfaceBuilder.h: Added new headers.

2004-12-31 14:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindowInspector.gorm: Added form
	to allow setting of the miniaturized image by name.
	* Palettes/1Windows/main.m: Changes to use the form added to the
	UI.

2004-12-31 08:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.h: Added GormFilesOwner to @class declaration.